RESOLVED FIXED115230
[soup] The public WK header file should not include WKAPICast.h
https://bugs.webkit.org/show_bug.cgi?id=115230
Summary [soup] The public WK header file should not include WKAPICast.h
Changhun Kang
Reported 2013-04-26 00:30:53 PDT
Don't include WKAPICast.h in a public WK header. WKSoupRequestManager.h includes WKAPICast.h
Attachments
Patch (1.82 KB, patch)
2013-04-26 00:40 PDT, Changhun Kang
no flags
Changhun Kang
Comment 1 2013-04-26 00:40:02 PDT
WebKit Commit Bot
Comment 2 2013-05-26 18:05:26 PDT
Comment on attachment 199793 [details] Patch Rejecting attachment 199793 [details] from review queue. temoochin@company100.net does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Commit Bot
Comment 3 2013-05-26 18:57:12 PDT
Comment on attachment 199793 [details] Patch Clearing flags on attachment: 199793 Committed r150732: <http://trac.webkit.org/changeset/150732>
WebKit Commit Bot
Comment 4 2013-05-26 18:57:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.