The public WK header file should not include WKAPICast.h https://bugs.webkit.org/show_bug.cgi?id=115230

Patch by Changhun Kang <temoochin@company100.net> on 2013-05-26
Reviewed by Darin Adler.

Otherwise, WebKit internal headers are exposed.
No new tests. No change in behavior.
* UIProcess/API/C/soup/WKSoupRequestManager.h:
* UIProcess/soup/WebSoupRequestManagerClient.h:

Canonical link: https://commits.webkit.org/135100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150732 268f45cc-cd09-0410-ab3c-d52691b4dbfc